--- a/index.html
+++ b/index.html
@@ -162,14 +162,13 @@
               <p>Est diam venenatis arcu lacus ad. Duis quis eros. Cursus et rutrum eleifend sollicitudin lacinia justo id turpis. Nec convallis integer. Odio eget duis. Nulla aenean et. Blandit varius sollicitudin. Pellentesque leo primis neque urna magnis. Elit ut sollicitudin. Et est a nam dolores eget itaque sagittis et parturient duis est eleifend sociis rutrum odio viverra integer.</p>
               <div class="about-profile">
                 <ul class="admin-profile">
-                  <li><span class="pro-title"> Name </span> <span class="pro-detail">Tom Saulnier</span></li>
-                  <li><span class="pro-title"> Age </span> <span class="pro-detail">25 Years</span></li>
-                  <li><span class="pro-title"> Experience </span> <span class="pro-detail">4 Years</span></li>
-                  <li><span class="pro-title"> Country </span> <span class="pro-detail">USA</span></li>
-                  <li><span class="pro-title"> Location </span> <span class="pro-detail">San Francisco, CA</span></li>
-                  <li><span class="pro-title"> e-mail </span> <span class="pro-detail">email@example.com</span></li>
-                  <li><span class="pro-title"> Phone </span> <span class="pro-detail">+ (00) 123 456 789</span></li>
-                  <li><span class="pro-title"> Freelance </span> <span class="pro-detail">Available</span></li>
+                  <li><span class="pro-title"> Name </span> <span class="pro-detail">Sajid Jamshed</span></li>
+                 
+                  <li><span class="pro-title"> Experience </span> <span class="pro-detail">10 Years</span></li>
+                  <li><span class="pro-title"> Country </span> <span class="pro-detail">Pakistan</span></li>
+                  <li><span class="pro-title"> Location </span> <span class="pro-detail">Lahore</span></li>
+                  <li><span class="pro-title"> e-mail </span> <span class="pro-detail">sajidkhan22@gmail.com</span></li>
+                  <li><span class="pro-title"> Phone </span> <span class="pro-detail">+ 92 309 4716605</li>
                 </ul>
               </div>
               <a href="#" class="btn btn-common"><i class="icon-paper-clip"></i> Download Resume</a>
