--- a/index.html
+++ b/index.html
@@ -246,6 +246,17 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-md-6 col-lg-3 col-xs-12">
+                    <div class="services-item wow fadeInDown" data-wow-delay="1.2s">
+                        <div class="icon">
+                            <i class="icon-bubbles"></i>
+                        </div>
+                        <div class="services-content">
+                            <h3><a href="#">Software Development</a></h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse condi.</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
