--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
     <section id="portfolios" class="section-padding">
         <!-- Container Starts -->
         <div class="container">
-            <h2 class="section-title wow flipInX" data-wow-delay="0.4s">My Remarkable Works</h2>
+            <h2 class="section-title wow flipInX" data-wow-delay="0.4s">My Clients</h2>
             <div class="row">
                 <div class="col-md-12">
                     <!-- Portfolio Controller/Buttons -->
@@ -367,7 +367,7 @@
                                             <i class="icon-eye"></i>
                                         </a>
                                         <a class="link" href="#">
-                                            <i class="icon-link"></i>
+                                          Kims Restaurant  <i class="icon-link"></i>
                                         </a>
                                     </div>
                                 </div>
