--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                             <i class="icon-grid"></i>
                         </div>
                         <div class="services-content">
-                            <h3><a href="#">Full-Stack Development</a></h3>
+                            <h3><a href="#">FullStack Development</a></h3>
                             
                         </div>
                     </div>
@@ -259,7 +259,7 @@
                             <i class="icon-bubbles"></i>
                         </div>
                         <div class="services-content">
-                            <h3><a href="#">Mobile App Development</a></h3>
+                            <h3><a href="#">Android Development</a></h3>
                         </div>
                     </div>
                 </div>
