--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@
                                     <div class="contact-icon">
                                         <i class="fa fa-envelope"></i>
                                     </div>
-                                    <p><a href="mailto:hello@tom.com">sajidkhan22@gmail.com</a></p>
+                                    <p><a href="mailto:sajidkhan22@gmail.com">sajidkhan22@gmail.com</a></p>
                                 </div>
                                 <div class="single-contact">
                                     <div class="contact-icon">
@@ -581,7 +581,7 @@
                         </div>
                     </div>
                     <div class="col-md-12">
-                        <object style="border:0; height: 450px; width: 100%;" data="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d34015.943594576835!2d-106.43242624069771!3d31.677719472407432!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86e75d90e99d597b%3A0x6cd3eb9a9fcd23f1!2sCourtyard+by+Marriott+Ciudad+Juarez!5e0!3m2!1sen!2sbd!4v1533791187584"></object>
+                        <object style="border:0; height: 450px; width: 100%;" data="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d27209.103976972987!2d74.34123783955076!3d31.520369599999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3919053b8db724c7%3A0x9336b538fe6b414!2sModel%20town%20A%20block!5e0!3m2!1sen!2s!4v1601372397392!5m2!1sen!2s"></object>
                     </div>
                 </div>
             </div>
