--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
                 </div>
                 <!-- Portfolio Recent Projects -->
                 <div id="portfolio" class="row wow fadeInDown" data-wow-delay="0.4s">
-                    <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix development print">
+                    <div class="col-sm-6 col-md-4 col-lg-3 col-xl-4 mix development print">
                         <div class="portfolio-item">
                             <div class="shot-item">
                                 <img src="assets/img/ECf.png" alt="" />
@@ -365,7 +365,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix design print">
+                    <div class="col-sm-6 col-md-4 col-lg-3 col-xl-4 mix design print">
                         <div class="portfolio-item">
                             <div class="shot-item">
                                 <img src="assets/img/kazmeh.png" alt="" />
@@ -380,7 +380,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix development">
+                    <div class="col-sm-6 col-md-4 col-lg-3 col-xl-4 mix development">
                         <div class="portfolio-item">
                             <div class="shot-item">
                                 <img src="assets/img/markat.png" alt="" />
@@ -395,7 +395,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix development design">
+                    <div class="col-sm-6 col-md-4 col-lg-3 col-xl-4 mix development design">
                         <div class="portfolio-item">
                             <div class="shot-item">
                                 <img src="assets/img/samacell.png" alt="" />
@@ -410,10 +410,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix development">
+                    <div class="col-sm-6 col-md-4 col-lg-3 col-xl-4 mix development">
                         <div class="portfolio-item">
                             <div class="shot-item">
-                                <img src="assets/img/gallery/img-5.jpg" alt="" />
+                                <img src="assets/img/lttcom.png" alt="" />
                                 <div class="overlay">
                                     <div class="icons">
                                         <a class="lightbox preview" href="assets/img/gallery/img-5.jpg">
@@ -427,7 +427,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix print design">
+                    <div class="col-sm-6 col-md-4 col-lg-3 col-xl-4 mix print design">
                         <div class="portfolio-item">
                             <div class="shot-item">
                                 <img src="assets/img/gallery/img-6.jpg" alt="" />
