--- a/index.html
+++ b/index.html
@@ -430,17 +430,16 @@
                     <div class="col-sm-6 col-md-4 col-lg-3 col-xl-4 mix print design">
                         <div class="portfolio-item">
                             <div class="shot-item">
-                                <img src="assets/img/gallery/img-6.jpg" alt="" />
-                                <div class="overlay">
-                                    <div class="icons">
-                                        <a class="lightbox preview" href="assets/img/gallery/img-6.jpg">
-                                            <i class="icon-eye"></i>
-                                        </a>
-                                        <a class="link" href="#">
-                                            <i class="icon-link"></i>
-                                        </a>
-                                    </div>
-                                </div>
+                                <img src="assets/img/ramada.png" alt="" />
+                               
+                            </div>
+                        </div>
+                    </div>
+                     <div class="col-sm-6 col-md-4 col-lg-3 col-xl-4 mix print design">
+                        <div class="portfolio-item">
+                            <div class="shot-item">
+                                <img src="assets/img/more.png" alt="" />
+                               
                             </div>
                         </div>
                     </div>
