--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                                 </li>
                             </ul>
                             <div class="header-button wow fadeInUp" data-wow-delay="1s">
-                                <a href="https://wa.me/+923094716605/?text=Hi Sam, Whatsup“" class="btn btn-common">WhatsApp Chat Now</a>
+                                <a href="https://wa.me/+923094716605/?text=Hi Sajid, I am loking for your service“" class="btn btn-common">WhatsApp Chat Now</a>
                             </div>
                         </div>
                     </div>
@@ -165,8 +165,8 @@
                                 <li><span class="pro-title"> Phone </span> <span class="pro-detail">+ 92 309 4716605</li>
                             </ul>
                         </div>
-                        <a href="#" class="btn btn-common"><i class="icon-paper-clip"></i> Download Resume</a>
-                        <a href="#" class="btn btn-danger"><i class="icon-speech"></i> Contact Me</a>
+                       
+                        <a href="https://wa.me/+923094716605/?text=Hi Sajid, I am loking for your service" class="btn btn-danger"><i class="icon-speech"></i> Contact Me</a>
                     </div>
                 </div>
             </div>
