--- a/sunshine/index.html
+++ b/sunshine/index.html
@@ -93,7 +93,7 @@
           </div>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
-          <img src="C:\Users\Dell\Downloads\arsha\arsha\assets\img/1.png" width="300" height="200" class="img-fluid animated" alt="">
+          <img src="assets\img\1.png" width="300" height="200" class="img-fluid animated" alt="">
         </div>
       </div>
     </div>
