--- a/sunshine/index.html
+++ b/sunshine/index.html
@@ -85,8 +85,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
-          <h1>No.1 Glass cleaning company allover Pakistan</h1>
-          <h2>We are team of Best Window Cleaning Services Company in Islamabad </h2>
+          <h1>No.1 Glass Cleaning Company- Pakistan</h1>
+          <h2>We are team of Best Window Cleaning Services Company in Islamabad. </h2>
           <div class="d-flex justify-content-center justify-content-lg-start">
             <!-- <a href="#about" class="btn-get-started scrollto">Get Started</a> -->
             <!-- <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Watch Video</span></a> -->
@@ -704,7 +704,7 @@ Ultimately the price is determined by what exactly is being purchased, as well a
                 <p>03335352594 </p>
               </div>
 
-              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3319.187943480268!2d73.22306971520591!3d33.70408538070211!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38dfc32d2fbe26cf%3A0xcbbcd367daa5d225!2sIslamabad%20Model%20Town%20-%20IMT!5e0!3m2!1sen!2s!4v1623999871560!5m2!1sen!2s" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
             </div>
 
           </div>
