--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+     <meta name="description" content="Software Engineer Sajid Jamshed">
+	<meta name="keyword" content="Software Engineer Sajid Jamshed">
+  <meta name="author" content="Software Engineer Sajid Jamshed">
+<meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Sajid Jamshed - Software Engineer  Digital Marketing </title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
