--- a/index.html
+++ b/index.html
@@ -31,12 +31,14 @@
     <link rel="stylesheet" type="text/css" href="assets/css/responsive.css">
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-179421177-1"></script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7RHM73WV82"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-179421177-1');
+  gtag('config', 'G-7RHM73WV82');
 </script>
 
 </head>
