--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-179421177-1"></script>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-7RHM73WV82"></script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7RHM73WV82"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -40,7 +42,6 @@
 
   gtag('config', 'G-7RHM73WV82');
 </script>
-
 </head>
 <body>
     <!-- Header Area wrapper Starts -->
