--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="keyword" content="Software Engineer Sajid Jamshed">
   <meta name="author" content="Software Engineer Sajid Jamshed">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Sajid Jamshed - Software Engineer  Digital Marketing </title>
+    <title>Sajid Jamshed - Software Engineer  Digital Marketing Lahore </title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
     <!-- Fonts -->
