--- a/arooj/bleach.html
+++ b/arooj/bleach.html
@@ -99,9 +99,9 @@
 
         <ol>
           <li><a href="index.html">Home</a></li>
-          <li>Inner Page</li>
+          <li>Magic Drop - Bleach</li>
         </ol>
-        <h2>Magic Drop - Bleach</h2>
+        <!--<h2>Magic Drop - Bleach</h2>-->
 
       </div>
     </section><!-- End Breadcrumbs -->
@@ -111,9 +111,7 @@
 
             <div class="row content">
                 <div class="col-lg-6">
-                    <!-- <p>
-                        Example inner page template
-                    </p> -->
+                    <h2>Magic Drop - Bleach</h2>
 
                     <!-- <h3>The Magic Drop - Dish Wash...<br><br>   -->
                         <h2>Magic Drop - Bleach</h2><br>
