--- a/arooj/dishwash.html
+++ b/arooj/dishwash.html
@@ -99,9 +99,9 @@
 
         <ol>
           <li><a href="index.html">Home</a></li>
-          <li>Inner Page</li>
+          <li>Magic Drop - Dish Wash</li>
         </ol>
-        <h2>Magic Drop - Dish Wash</h2>
+        <!--<h2>Magic Drop - Dish Wash</h2>-->
 
       </div>
     </section><!-- End Breadcrumbs -->
@@ -111,9 +111,7 @@
 
             <div class="row content">
                 <div class="col-lg-6">
-                    <p>
-                        Example inner page template
-                    </p>
+                    <h2>Magic Drop - Dish Wash</h2>
 
                     <!-- <h3>The Magic Drop - Dish Wash...<br><br>   -->
                     <h5 >
@@ -147,7 +145,7 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-6">
-                        <h3>Contact Us</h3>
+                        <!--<h3>Contact Us</h3>-->
                         <!-- <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
                         <form action="" method="post">
                           <input type="email" name="email"><input type="submit" value="Subscribe">
