--- a/index.html
+++ b/index.html
@@ -85,14 +85,15 @@
 		          <div class="col-md-12 heading-section ftco-animate">
 		          	<h1 class="big">About</h1>
 		            <h2 class="mb-4">About Me</h2>
-		            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+		            <p>Highly skilled and  experienced Full Stack Developer with over 10 years in the
+programming field
+</p>
 		            <ul class="about-info mt-4 px-md-0 px-2">
-		            	<li class="d-flex"><span>Name:</span> <span>Clark Thompson</span></li>
-		            	<li class="d-flex"><span>Date of birth:</span> <span>January 01, 1987</span></li>
-		            	<li class="d-flex"><span>Address:</span> <span>San Francisco CA 97987 USA</span></li>
+		            	<li class="d-flex"><span>Name:</span> <span>Sajid Jamshed</span></li>
+		                <li class="d-flex"><span>Address:</span> <span>Alnahda , Dubai , UAE</span></li>
 		            	<li class="d-flex"><span>Zip code:</span> <span>1000</span></li>
-		            	<li class="d-flex"><span>Email:</span> <span>clarkthomp@gmail.com</span></li>
-		            	<li class="d-flex"><span>Phone: </span> <span>+1-2234-5678-9-0</span></li>
+		            	<li class="d-flex"><span>Email:</span> <span>sajidali2267@gmail.com</span></li>
+		            	<li class="d-flex"><span>Phone: </span> <span>+971-0557940280</span></li>
 		            </ul>
 		          </div>
 		        </div>
