--- a/index.html
+++ b/index.html
@@ -122,25 +122,41 @@ programming field
         </div>
     		<div class="row">
     			<div class="col-md-6">
-    				<div class="resume-wrap ftco-animate">
-    					<span class="date">2014-2015</span>
-    					<h2>Master Degree of Design</h2>
-    					<span class="position">Cambridge University</span>
-    					<p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-    				</div>
-    				<div class="resume-wrap ftco-animate">
-    					<span class="date">2014-2015</span>
-    					<h2>Bachelor's Degree of C.A</h2>
-    					<span class="position">Cambridge University</span>
-    					<p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-    				</div>
-    				<div class="resume-wrap ftco-animate">
-    					<span class="date">2014-2015</span>
-    					<h2>Diploma in Computer</h2>
-    					<span class="position">Cambridge University</span>
-    					<p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-    				</div>
-    			</div>
+    <div class="resume-wrap ftco-animate">
+        <span class="date">2019-Present</span>
+        <h2>Full Stack Developer</h2>
+        <span class="position">SAAG Solutions - Kuwait</span>
+        <p class="mt-4">Successfully managing and delivering multiple live projects utilizing Asp.net, Ajax, SQL Server, and API integration. Developed APIs and integrated with third-party applications of different vendors.</p>
+    </div>
+
+    <div class="resume-wrap ftco-animate">
+        <span class="date">04/2014 - 06/2018</span>
+        <h2>Full Stack Developer</h2>
+        <span class="position">Public Authority For Applied Education (PAAET) | Kuwait</span>
+        <p class="mt-4">Developed and implemented web applications, effectively analyzing operational problems and providing innovative solutions using ASP.NET. Created innovative and efficient web applications.</p>
+    </div>
+
+    <div class="resume-wrap ftco-animate">
+        <span class="date">04/2011 - 06/2014</span>
+        <h2>Dot Net Developer</h2>
+        <span class="position">New Mowasat Hospital – Kuwait</span>
+        <p class="mt-4">Maintained Hospital Website and Intranet Portal, demonstrating expertise in SharePoint Server configuration and maintenance. Developed web applications using ASP.NET.</p>
+    </div>
+
+    <div class="resume-wrap ftco-animate">
+        <span class="date">04/2009 - 02/2010</span>
+        <h2>Dot Net Developer</h2>
+        <span class="position">Trustech Kuwait – Kuwait</span>
+        <p class="mt-4">Led the development of various web-based applications, contributing to the growth of this leading IT services provider. Successfully launched an Online Food Ordering Mobile app. Developed a POS Software running at many restaurants.</p>
+    </div>
+
+    <div class="resume-wrap ftco-animate">
+        <span class="date">04/2006 - 04/2009</span>
+        <h2>Dot Net Developer</h2>
+        <span class="position">New Telecom – Kuwait</span>
+        <p class="mt-4">Developed a comprehensive Procurement, Inventory & Sales Management System for this prominent telecom products retail & services company. Created a blog with good traffic and ran a local Ecomm Store.</p>
+    </div>
+</div>
 
     			<div class="col-md-6">
     				<div class="resume-wrap ftco-animate">
