--- a/index.html
+++ b/index.html
@@ -157,27 +157,6 @@ programming field
         <p class="mt-4">Developed a comprehensive Procurement, Inventory & Sales Management System for this prominent telecom products retail & services company. Created a blog with good traffic and ran a local Ecomm Store.</p>
     </div>
 </div>
-
-    			<div class="col-md-6">
-    				<div class="resume-wrap ftco-animate">
-    					<span class="date">2014-2015</span>
-    					<h2>Art &amp; Creative Director</h2>
-    					<span class="position">Cambridge University</span>
-    					<p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-    				</div>
-    				<div class="resume-wrap ftco-animate">
-    					<span class="date">2014-2015</span>
-    					<h2>Wordpress Developer</h2>
-    					<span class="position">Cambridge University</span>
-    					<p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-    				</div>
-    				<div class="resume-wrap ftco-animate">
-    					<span class="date">2017-2018</span>
-    					<h2>UI/UX Designer</h2>
-    					<span class="position">Cambridge University</span>
-    					<p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-    				</div>
-    			</div>
     		</div>
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
@@ -197,7 +176,118 @@ programming field
           </div>
         </div>
     		<div class="row">
-					<div class="col-md-4 text-center d-flex ftco-animate">
+			<div class="col-md-4 text-center d-flex ftco-animate">
+    <a href="#" class="services-1">
+        <span class="icon">
+            <i class="flaticon-layers"></i>
+        </span>
+        <div class="desc">
+            <h3 class="mb-5">Web Design</h3>
+        </div>
+    </a>
+</div>
+
+<div class="col-md-4 text-center d-flex ftco-animate">
+    <a href="#" class="services-1">
+        <span class="icon">
+            <i class="flaticon-code"></i>
+        </span>
+        <div class="desc">
+            <h3 class="mb-5">Full Stack Development</h3>
+        </div>
+    </a>
+</div>
+
+<div class="col-md-4 text-center d-flex ftco-animate">
+    <a href="#" class="services-1">
+        <span class="icon">
+            <i class="flaticon-api"></i>
+        </span>
+        <div class="desc">
+            <h3 class="mb-5">API Development</h3>
+        </div>
+    </a>
+</div>
+
+<div class="col-md-4 text-center d-flex ftco-animate">
+    <a href="#" class="services-1">
+        <span class="icon">
+            <i class="flaticon-git"></i>
+        </span>
+        <div class="desc">
+            <h3 class="mb-5">Git & GitHub</h3>
+        </div>
+    </a>
+</div>
+
+<div class="col-md-4 text-center d-flex ftco-animate">
+    <a href="#" class="services-1">
+        <span class="icon">
+            <i class="flaticon-seo"></i>
+        </span>
+        <div class="desc">
+            <h3 class="mb-5">SEO</h3>
+        </div>
+    </a>
+</div>
+
+<div class="col-md-4 text-center d-flex ftco-animate">
+    <a href="#" class="services-1">
+        <span class="icon">
+            <i class="flaticon-marketing"></i>
+        </span>
+        <div class="desc">
+            <h3 class="mb-5">Digital Marketing</h3>
+        </div>
+    </a>
+</div>
+
+<div class="col-md-4 text-center d-flex ftco-animate">
+    <a href="#" class="services-1">
+        <span class="icon">
+            <i class="flaticon-shopping-cart"></i>
+        </span>
+        <div class="desc">
+            <h3 class="mb-5">E-commerce</h3>
+        </div>
+    </a>
+</div>
+
+<div class="col-md-4 text-center d-flex ftco-animate">
+    <a href="#" class="services-1">
+        <span class="icon">
+            <i class="flaticon-ad"></i>
+        </span>
+        <div class="desc">
+            <h3 class="mb-5">Ads Campaign</h3>
+        </div>
+    </a>
+</div>
+
+<div class="col-md-4 text-center d-flex ftco-animate">
+    <a href="#" class="services-1">
+        <span class="icon">
+            <i class="flaticon-content"></i>
+        </span>
+        <div class="desc">
+            <h3 class="mb-5">Content Marketing</h3>
+        </div>
+    </a>
+</div>
+
+<div class="col-md-4 text-center d-flex ftco-animate">
+    <a href="#" class="services-1">
+        <span class="icon">
+            <i class="flaticon-leads"></i>
+        </span>
+        <div class="desc">
+            <h3 class="mb-5">Leads Generation</h3>
+        </div>
+    </a>
+</div>
+		
+			
+			<div class="col-md-4 text-center d-flex ftco-animate">
 						<a href="#" class="services-1">
 							<span class="icon">
 								<i class="flaticon-analysis"></i>
