--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free/css/all.min.css">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flaticon@6.0.0-alpha1/css/flaticon.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
     <link rel="stylesheet" href="css/animate.css">
     
@@ -177,6 +176,16 @@ programming field
           </div>
         </div>
     		<div class="row">
+			<div class="col-md-4 text-center d-flex ftco-animate">
+    <a href="#" class="services-1">
+        <span class="icon">
+            <i class="fas fa-paint-brush"></i>
+        </span>
+        <div class="desc">
+            <h3 class="mb-5">Web Design</h3>
+        </div>
+    </a>
+</div>
 		 <div class="col-md-4 text-center d-flex ftco-animate">
     <a href="#" class="services-1">
         <span class="icon">
