--- a/index.html
+++ b/index.html
@@ -176,31 +176,11 @@ programming field
           </div>
         </div>
     		<div class="row">
-			<div class="col-md-4 text-center d-flex ftco-animate">
+			
+ <div class="col-md-4 text-center d-flex ftco-animate">
     <a href="#" class="services-1">
         <span class="icon">
-            <i class="fas fa-paint-brush"></i>
-        </span>
-        <div class="desc">
-            <h3 class="mb-5">Web Design</h3>
-        </div>
-    </a>
-</div>
-		 <div class="col-md-4 text-center d-flex ftco-animate">
-    <a href="#" class="services-1">
-        <span class="icon">
-            <i class="flaticon-paint-palette"></i>
-        </span>
-        <div class="desc">
-            <h3 class="mb-5">Web Design</h3>
-        </div>
-    </a>
-</div>
-
-<div class="col-md-4 text-center d-flex ftco-animate">
-    <a href="#" class="services-1">
-        <span class="icon">
-            <i class="flaticon-code"></i>
+            <i class="fas fa-code"></i>
         </span>
         <div class="desc">
             <h3 class="mb-5">Full Stack Development</h3>
@@ -211,7 +191,7 @@ programming field
 <div class="col-md-4 text-center d-flex ftco-animate">
     <a href="#" class="services-1">
         <span class="icon">
-            <i class="flaticon-api"></i>
+            <i class="fas fa-cogs"></i>
         </span>
         <div class="desc">
             <h3 class="mb-5">API Development</h3>
@@ -222,7 +202,7 @@ programming field
 <div class="col-md-4 text-center d-flex ftco-animate">
     <a href="#" class="services-1">
         <span class="icon">
-            <i class="flaticon-git"></i>
+            <i class="fas fa-code-branch"></i>
         </span>
         <div class="desc">
             <h3 class="mb-5">Git & GitHub</h3>
@@ -233,7 +213,7 @@ programming field
 <div class="col-md-4 text-center d-flex ftco-animate">
     <a href="#" class="services-1">
         <span class="icon">
-            <i class="flaticon-search-engine"></i>
+            <i class="fas fa-search"></i>
         </span>
         <div class="desc">
             <h3 class="mb-5">SEO</h3>
@@ -244,7 +224,7 @@ programming field
 <div class="col-md-4 text-center d-flex ftco-animate">
     <a href="#" class="services-1">
         <span class="icon">
-            <i class="flaticon-digital-marketing"></i>
+            <i class="fas fa-bullhorn"></i>
         </span>
         <div class="desc">
             <h3 class="mb-5">Digital Marketing</h3>
@@ -255,7 +235,7 @@ programming field
 <div class="col-md-4 text-center d-flex ftco-animate">
     <a href="#" class="services-1">
         <span class="icon">
-            <i class="flaticon-shopping-cart"></i>
+            <i class="fas fa-shopping-cart"></i>
         </span>
         <div class="desc">
             <h3 class="mb-5">E-commerce</h3>
@@ -266,7 +246,7 @@ programming field
 <div class="col-md-4 text-center d-flex ftco-animate">
     <a href="#" class="services-1">
         <span class="icon">
-            <i class="flaticon-advertising"></i>
+            <i class="fas fa-ad"></i>
         </span>
         <div class="desc">
             <h3 class="mb-5">Ads Campaign</h3>
@@ -277,7 +257,7 @@ programming field
 <div class="col-md-4 text-center d-flex ftco-animate">
     <a href="#" class="services-1">
         <span class="icon">
-            <i class="flaticon-content"></i>
+            <i class="fas fa-file-alt"></i>
         </span>
         <div class="desc">
             <h3 class="mb-5">Content Marketing</h3>
@@ -288,15 +268,13 @@ programming field
 <div class="col-md-4 text-center d-flex ftco-animate">
     <a href="#" class="services-1">
         <span class="icon">
-            <i class="flaticon-lead-generation"></i>
+            <i class="fas fa-lightbulb"></i>
         </span>
         <div class="desc">
             <h3 class="mb-5">Leads Generation</h3>
         </div>
     </a>
 </div>
-
- 
     
 				  
 				</div>
